# sapper

./: .gitignore  CONTRIBUTING.md  README.md  azure-pipelines.yml  coverage.html  go.mod  go.sum  main.go
adapters/: aggregate-brick-db.go  aggregate-brick-db_test.go  brick-db-factory.go  cli-parameter-resolver.go  cli-parameter-resolver_test.go  cmake-service-builder.go  compound-parameter-resolver.go  compound-parameter-resolver_test.go  conan-dependency-manager.go  conan-dependency-manager_test.go  filesystem-brick-db.go  filesystem-brick-db_test.go  filesystem-configuration.go  filesystem-configuration_test.go  filesystem-service-persistence.go  git-brick-db.go  interactive-parameter-resolver.go  interactive-parameter-resolver_test.go  mapbased-parameter-resolver.go  mapbased-parameter-resolver_test.go  sapper-parameter-resolver.go
cmd/: brick.go  remote.go  root.go  service.go  version.go
core/: brick-api.go  brick-api_test.go  brick.go  brick_test.go  core.go  core_test.go  remote-api.go  remote-api_test.go  remote.go  section.go  service.go  (+6 more)
remote/base/hexagonal-skeleton/: CMakeLists.txt  Makefile  conanfile.txt  manifest.yaml
remote/base/hexagonal-skeleton/src/: CMakeLists.txt
remote/base/hexagonal-skeleton/src/adapters/: CMakeLists.txt
remote/base/hexagonal-skeleton/src/app/: CMakeLists.txt  main.cpp
remote/base/hexagonal-skeleton/src/core/: CMakeLists.txt  core.cpp  core.h
remote/base/hexagonal-skeleton/src/ports/: CMakeLists.txt  api.h  model.h
remote/handler/httplib/src/adapters/http-handler/: CMakeLists.txt  http-handler.cpp  http-handler.h
(+44 files in other folders)
